<resources>
    <string name="app_name">admin-deskita</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="product_fragment_label">Product Fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="mediaTypeJSON">application/json; charset=utf-8</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="order_fragment_label" />
    <string name="analytic">Analytic</string>
    <string name="products">Products</string>
    <string name="customers">Customers</string>
    <string name="orders">Orders</string>
    <string name="title_activity_add_update_product">AddUpdateProductAct</string>
    <string name="your_profile">Your profile</string>
    <string name="discount">Discount</string>
</resources>