<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SecondFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.admin_deskita.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/CustomerDetailFragment"
        android:name="com.example.admin_deskita.CustomerDetailFragment"
        android:label=""
        tools:layout="@layout/fragment_customer_detail">

    </fragment>
    <fragment
        android:id="@+id/OrderDetailFragment"
        android:name="com.example.admin_deskita.OrderDetailFragment"
        android:label="@string/order_fragment_label"
        tools:layout="@layout/fragment_order_detail">

    </fragment>
    <fragment
        android:id="@+id/ProductDetailFragment"
        android:name="com.example.admin_deskita.ProductDetailFragment"
        android:label="@string/product_fragment_label"
        tools:layout="@layout/fragment_product_detail"></fragment>

    <fragment
        android:id="@+id/OrderFragment"
        android:name="com.example.admin_deskita.OrderFragment"
        android:label="@string/order_fragment_label"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/to_order_detail_fragment"
            app:destination="@id/OrderDetailFragment"
            />

    </fragment>

    <fragment
        android:id="@+id/CustomerFragment"
        android:name="com.example.admin_deskita.CustomerFragment"
        android:label=""
        tools:layout="@layout/fragment_customer">
        <action
            android:id="@+id/to_customer_detail_fragment"
            app:destination="@id/CustomerDetailFragment"
            />
    </fragment>

    <fragment
        android:id="@+id/ProductFragment"
        android:name="com.example.admin_deskita.ProductFragment"
        android:label="@string/product_fragment_label"
        tools:layout="@layout/fragment_product">

        <action
            android:id="@+id/to_product_detail_fragment"
            app:destination="@id/ProductDetailFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.admin_deskita.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_ProductFragment"
            app:destination="@id/ProductFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_OrderFragment"
            app:destination="@id/OrderFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_CustomerFragment"
            app:destination="@id/CustomerFragment" />
    </fragment>


</navigation>